# esg-risk-finance

./: .gitignore  README.md  _inspect_nb.py  analysis.md  esg_risk_analysis.ipynb  ingest_data.py  pyproject.toml  workflow.yaml
charts/: esg_risk_charts.html
scripts/: run_ingest.py  run_transform.py
src/: config.yaml  requirements.txt
src/analyze/: __main__.py  correlation.py  dashboard.py  scores.py  summary.py  trends.py
src/ingest/: __main__.py  config.py  esg.py  http.py  ieg.py  join.py  lending.py  write.py
src/transform/: __main__.py  aggregate_esg.py  aggregate_loans.py  aggregate_ratings.py  write.py
tests/: test_ingest.py  test_ingest_e2e.py  test_ingest_integration.py  test_pipeline.py  test_write.py
