[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "esg-risk-finance"
version = "0.1.0"
description = "ESG Risk & WBG Lending Exposure Analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.34.2",
    "pandas>=3.0.3",
    "matplotlib>=3.11.0",
    "scipy>=1.18.0",
    "numpy>=2.5.1",
    "rapidfuzz>=3.14.5",
]

[project.scripts]
esg-ingest    = "src.ingest.__main__:main"
esg-transform = "src.transform.__main__:main"
esg-analyze   = "src.analyze.__main__:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.setuptools.package-data]
src = ["*.yaml"]
