[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "esg-risk-finance"
version = "0.1.0"
description = "ESG Risk & WBG Lending Exposure Analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "pandas>=2.0.0",
    "matplotlib>=3.5.0",
    "scipy>=1.9.0",
    "numpy>=1.23.0",
    "rapidfuzz>=3.13.0",
    "pyyaml>=6.0",
]

[project.scripts]
esg-ingest    = "src.ingest.__main__:main"
esg-transform = "src.transform.__main__:main"
esg-analyze   = "src.analyze.__main__:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.setuptools.package-data]
src = ["*.yaml"]
